fixing alignment issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,6 +65,16 @@ only screen and (max-width: 760px),
   /* Force table to not be like tables anymore */
   table.mobi, thead.mobi, tbody.mobi, th.mobi, td.mobi, tr.mobi { 
     display: block; 
+    text-align: center;
+  }
+
+  h2{
+    font-size: 20px;
+  }
+
+  img{
+    height: auto;
+    width: 100%;
   }
   
   /* Hide table headers (but not display: none;, for accessibility) */
@@ -82,6 +92,9 @@ only screen and (max-width: 760px),
     border-bottom: 1px solid #eee; 
     position: relative;
     padding-left: 50%; 
+       width:100%;
+      align: center;
+      valign:middle;
   }
   
   td:before { 
@@ -95,3 +108,14 @@ only screen and (max-width: 760px),
     white-space: nowrap;
   }
   }
+
+  @media 
+only screen and (min-width: 760px),
+(max-device-width: 768px) and (min-device-width: 1024px)  {
+    td{
+       width:25%;
+      align: center;
+      valign:middle;
+
+    }
+}
